# nordic-ble-dfu-demo

./: Cargo.toml  LICENSE  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
dfu/: README.md  build.txt  build_app.sh  private.key  secure_bootloader_ble_s140_pca10100.hex  secure_bootloader_ble_s140_pca10100_debug.hex
src/: main.rs
