[package]
authors = ["David Haig <david@ninjametal.com>"]
edition = "2018"
name = "nordic-ble-dfu-demo"
version = "0.1.0"

# sets the log level for any code in this repo (not dependency code)
# to set the log level for the soft-device take a look at it's feature declaration
[features]
default = [
    "defmt-default",
    "ble-l2cap",
    "ble-gatt-server",
    "ble-gatt-client",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]

[dependencies]
cortex-m = { version = "0.7.2" }
cortex-m-rt = "0.6.13"
cortex-m-rtic = { version = "0.5.5", optional = true }
defmt = { version = "0.2.0", features = ["alloc"] }
defmt-rtt = "0.2.0"

panic-probe = { version = "0.2.0", features = ["print-defmt"] }
nrf52840-hal = { version = "0.12.0" }
nrf52840-pac  = { version = "0.10.1", features = [ "rt" ] } 

futures = { version = "0.3.5", default-features = false }
fixed = "1.2.0"
heapless = "0.7.1"
alloc-cortex-m = "0.4.0"
embedded-hal = "0.2.4"
nb = "1.0.0"

nrf-softdevice = { version = "0.1.0", features = [
    "defmt",
    "defmt-info",
    "nrf52840",
    "s140",
    "ble-peripheral",
    "ble-gatt-server",
    "ble-central",
    "critical-section-impl"
] }

nrf-softdevice-defmt-rtt = { version = "0.1.0" }
nrf-softdevice-s140 = { version = "0.1.1" }
embassy = { version = "0.1.0", features = ["defmt", "defmt-trace"] }
embassy-traits = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = ["defmt", "defmt-trace", "nrf52840", "gpiote", "time-driver-rtc1", "_time-driver"] }
byteorder = { version = "1.4", default-features = false }
serde = { version = "1.0.123", default-features = false }
serde_derive = "1.0.123"
postcard = { version = "0.5.2", features = ["alloc"] }

[patch.crates-io]
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-defmt-rtt = { git = "https://github.com/embassy-rs/nrf-softdevice" }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }
embassy = { git = "https://github.com/embassy-rs/embassy" }
embassy-traits = { git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy" }
